# loopd

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  dashboard.py  loopd  pyproject.toml  requirements-dev.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  RESULTS.md  run_benchmark.py  selftest.py
benchmarks/results/20260718-003703/: rows.csv  summary.md
benchmarks/results/20260718-004548/: rows.csv  summary.md
benchmarks/results/20260718-004548/fizzbuzz/baseline/rep1/: fizzbuzz.py  test_fizzbuzz.py
benchmarks/results/20260718-004548/primes/baseline/rep1/: primes.py  test_primes.py
benchmarks/results/20260718-004548/roman/baseline/rep1/: roman.py  test_roman.py
benchmarks/tasks/fizzbuzz/: check.py  spec.md
benchmarks/tasks/primes/: check.py  spec.md
benchmarks/tasks/roman/: check.py
commands/: handoff.md
docs/: README.md  architecture.md  brand.md  cli.md  configuration.md  faq.md  security.md  usage.md
examples/: roman_spec.md
orchestrator/: __main__.py  analysis.py  architecture.py  claude_cli.py  cli.py  confidence.py  config.py  dashboard.py  developer.py  doctor.py  env.py  forecast.py  gates.py  github.py  handover.py  ledger.py  loop.py  memory.py  plan.py  planner.py  pm.py  probe.py  program.py  reporter.py  run.py  seed.py  workspace.py
orchestrator/prompts/: architect_system.md  dev_system.md  forecast_system.md  pm_system.md  program_system.md
prompts/: dev_system.md  pm_system.md
tests/: test_analysis.py  test_architecture.py  test_claude_cli.py  test_cli.py  test_confidence.py  test_dashboard.py  test_doctor.py  test_env.py  test_forecast.py  test_gates.py  test_github.py  test_handover.py  test_ledger.py  test_loop.py  test_memory.py  test_plan.py  test_pm.py  test_probe.py  test_program.py  test_reporter.py  test_seed.py  test_workspace.py
