[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "loopd"
version = "0.1.1"
description = "An autonomous engineering runtime that only ships changes it can prove."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ruchir Kulkarni" }]
keywords = ["ai", "agent", "claude", "claude-code", "automation", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
# Stdlib only — loopd deliberately has no Python dependencies. It drives the Claude Code CLI.
dependencies = []

[project.optional-dependencies]
# Not needed to RUN loopd — only to build and publish it. `pip install -e '.[dev]'`.
dev = ["build>=1.2", "twine>=5.1"]

[project.scripts]
loopd = "orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/ruchirk22/loopd"
Repository = "https://github.com/ruchirk22/loopd"
Issues = "https://github.com/ruchirk22/loopd/issues"

[tool.setuptools]
packages = ["orchestrator"]
# Ship ONLY the files named in package-data below (not every file that happens to sit under
# the package dir) — otherwise the gitignored internal design_system.png would leak into the wheel.
include-package-data = false

[tool.setuptools.package-data]
# System prompts and the dashboard's RUNTIME assets ship inside the package so an installed
# `loopd` works without a source checkout. Only the two assets the dashboard actually serves
# are bundled — design_system.png (internal reference) and loopd.png are deliberately excluded
# to keep the wheel small.
orchestrator = ["prompts/*.md", "assets/loopd.svg", "assets/loopd_no_bg.png"]
